# lean-rust-ffi

./: .taplo.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
c/: Makefile  clean.sh  main.c  test.sh
examples/map_array/c/: main.c
examples/map_array/lean/map_array/: lake-manifest.json  lakefile.toml
examples/map_array/rust/map_array/: Cargo.toml
examples/map_array/rust/map_array/src/: map.rs  map_options.rs
examples/map_array/rust/map_array_bin/: Cargo.toml
examples/map_array/rust/map_array_sys/: Cargo.toml  build.rs
examples/map_array/rust/map_array_sys/tests/: map_array_custom_allocator.rs
lean/lean_derive/: Cargo.toml
lean/lean_macro/src/: combine_lean_module_initializers.rs  create_module_trait.rs
lean/lean_macro/tests/: initialize_multiple_modules.rs  initialize_multiple_modules_with_error.rs
lean/lean_macro_internals/: Cargo.toml
lean/lean_macro_internals/src/: parse.rs
lean/map_array/: MapArray.lean
lean/map_array/MapArray/: Basic.lean
lean/map_array_bin/: Main.lean  lake-manifest.json  lakefile.toml
lean/src/: alloc.rs  error.rs  lean_types.rs  lib.rs  module.rs  runtime.rs  thread.rs
lean/src/lean_types/: byte_array.rs  float_array.rs
lean/src/runtime/: components.rs  handle.rs  initialization.rs  types.rs
lean/src/runtime/components/: args.rs
lean/tests/: module_initialization_error.rs
lean_build/src/: elan.rs  file.rs  lake.rs  lean_sys_root_module.rs  lib.rs  library_build.rs  runtime_build.rs  rust.rs  unicode.rs
lean_build/src/elan/: toolchain.rs
lean_build/src/elan_fork/: README.md  elan.rs
lean_build/src/elan_fork/elan/: errors.rs  settings.rs  toolchain.rs
lean_build/src/elan_fork/elan_dist/: errors.rs  manifestation.rs
lean_build/src/elan_fork/elan_utils/: errors.rs  raw.rs  utils.rs
lean_build/src/lake/: env.rs  package.rs
lean_sys/: Cargo.toml  build.rs
lean_sys/tests/: make_string_custom_allocator.rs  make_string_no_std.rs
rust/: Cargo.toml
rust/lean/: Cargo.toml
rust/lean/lean_derive/: Cargo.toml
rust/lean/lean_derive/src/: lib.rs  module.rs
rust/lean/lean_macro/: Cargo.toml
rust/lean/lean_macro/src/: lib.rs  module.rs
rust/lean/lean_macro/tests/: initialize_multiple_modules.rs  initialize_multiple_modules_with_error.rs
rust/lean/lean_macro_internals/src/: parse.rs
rust/lean/src/: error.rs  lib.rs  runtime.rs  thread.rs  util.rs
rust/lean/src/lean_types/: array.rs  object.rs  string.rs
rust/lean/tests/: make_string.rs  repeated_run_in_lean_runtime_panics.rs
rust/lean_build/: Cargo.toml  README.md
rust/lean_build/src/: elan.rs  elan_fork.rs  lake.rs  lean_sys_root_module.rs  lib.rs  runtime_build.rs  rust.rs
rust/lean_build/src/elan_fork/: elan.rs  elan_dist.rs  elan_utils.rs
rust/lean_build/src/elan_fork/elan/: config.rs  notifications.rs
rust/lean_build/src/elan_fork/elan_dist/: dist.rs
rust/lean_build/src/elan_fork/elan_utils/: notifications.rs  notify.rs  toml_utils.rs
rust/lean_build/src/lake/: env.rs  package.rs
rust/lean_sys/: Cargo.toml
rust/lean_sys/src/: lib.rs
rust/lean_sys/tests/: make_string_std.rs
rust/map_array/: Cargo.toml
rust/map_array/src/: lib.rs  module.rs
rust/map_array/tests/: map_array_custom_allocator.rs
rust/map_array_bin/: Cargo.toml
rust/map_array_sys/: Cargo.toml  build.rs
rust/map_array_sys/src/: lib.rs
rust/map_array_sys/tests/: map_array_custom_allocator.rs
(+1 files in other folders)
