[package]
name = "lean-sys"
version.workspace = true
edition.workspace = true
# It is not possible to specify that a crate links to multiple system libraries.
# See https://github.com/rust-lang/cargo/issues/4533
#
# links = [
#     "Init",
#     "leanrt",
#     "uv",
#     "gmp",
#     "c++",
#     "c++abi",
#     "m"
#   ]

[build-dependencies]
anyhow = { workspace = true }
lean-build = { path = "../lean_build" }

[dev-dependencies]
lean = { path = "../lean" }
