[workspace]
resolver = "3"
members = ["lean", "lean_build", "lean_sys", "map_array", "map_array_bin", "map_array_sys"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bindgen = "0.71.1"
cc = "1.2.26"
dirs = "6.0.0"
itertools = "0.14.0"
regex = "1.11.1"
semver = "1.0.26"
thiserror = "2.0.12"
toml = "0.9.5"
