[package]
name = "lean"
version.workspace = true
edition.workspace = true

[dependencies]
lean_derive = { path = "./lean_derive", optional = true }
lean_macro = { path = "./lean_macro", optional = true }
lean-sys = { path = "../lean_sys" }
thiserror = { workspace = true }

[features]
derive = ["lean_derive"]
macro = ["lean_macro"]
