[package]
name = "map-array-sys"
version.workspace = true
edition.workspace = true

[dependencies]
lean-sys = { path = "../../../../lean_sys" }

[build-dependencies]
anyhow = { workspace = true }
lean-build = { path = "../../../../lean_build" }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
lean = { path = "../../../../lean" }
